tdf#128393 change sorting while thawed

Change-Id: I9670c1557e0b39f9dde1f068bb091b9459d89baa
Reviewed-on: https://gerrit.libreoffice.org/81533
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>